image to folder

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,67 @@
 *{
-    margin: 0;
-    padding: 0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    
+    box-sizing: border-box;
 }
-.banner{
-    width: 1200px;
-    height: 50%;
-    background-image: 1;
+
+
+body {
+    font-family: 'Nunito', sans-serif;    
+    /*color: #fff;*/
+    line-height: 1.5;
+    margin: 0;
+}
+
+
+.wrapper {
+    max-width: 1200px;
+    margin: 0 auto; /*<-- this element tells my code to centre */
+    padding: 0 2em;
+}
+
+/* headings */
+
+
+#company-name {
+    color: #DEC9E9;
+    font-size: 1.5rem;
+}
+
+
+#intro,
+#fan-fav,
+#team {
+    padding: 4em 0;
+}
+
+
+#header {
+    background-color: black;
+}
+
+/* flexbox coming in around now */
+
+nav ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+nav ul li a:link,
+nav ul li a:visited {
+    text-decoration: none;
+    color: #DEC9E9;
+}
+
+nav ul li a:hover,
+nav ul li a:focus {
+    color: #fff;
+}
+
+#hero-banner {
+    height: 60vh;
+
+    background-color: #7251B5;
+
+    background-image: url(../images/ice-cream-cones.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0;
 }
