--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 body {
     font-family: 'Nunito', sans-serif;    
-    /*color: #fff;*/
+    color: #fff;
     line-height: 1.5;
     margin: 0;
 }
@@ -37,11 +37,20 @@ body {
     background-color: black;
 }
 
-/* flexbox coming in around now */
+#header > div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 nav ul {
     list-style: none;
     padding-left: 0;
+    display: flex;
+}
+
+nav ul li {
+    padding-left: 1.125em;
 }
 
 nav ul li a:link,
@@ -64,4 +73,84 @@ nav ul li a:focus {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#intro {
+    background-color: #7251B5;
+}
+
+#intro p {
+    max-width: 50%;
+}
+
+#fan-fav {
+    background-color: black;
+    color: #DEC9E9;
+}
+
+#fan-fav ol {
+    list-style: none;
+    padding: 0;
+
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#fan-fav li {
+    width: 50%;
+    padding-right: 15%;
+}
+
+#team {
+    background-color: #7251B5;
+}
+
+#team h2,
+#team .team-intro {
+    max-width: 40%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.team-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+    margin-top: 2.5em;
+}
+
+.team-grid article {
+    background-color: #6647A6;
+    border-radius: 20px;
+    padding: 2em 0;
+    /* text-align: center; this does the same thing as the next 3 elements. It's showing two active ways of centering the elements*/
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.team-grid article img {
+    width: 80px;
+
+    border-radius: 50%;
+    filter: grayscale(100%);
+}
+
+.team-grid h3 {
+    text-transform: uppercase;
+    margin-bottom: 0;
+}
+
+.team-grid p {
+    margin-top: 0;
+}
+
+footer {
+    background-color: black;
+    text-align: center;
 }
